Fixed horizontal overflow due to box-sizing bug

--- a/global.css
+++ b/global.css
@@ -5,7 +5,6 @@ main {
   padding: 0;
   width: 100vw;
   height: 100vh;
-  background-size: 135vh;
 }
 
 body {
@@ -27,7 +26,6 @@ body {
 /* Use a media query to scale the background image */
 @media only screen and (max-width: 600px) {
   body {
-    background-size: 173vw;
     background-position: 0% 50%;
   }
 }
